# Django-Shopper

./: .coveragerc  .file_info  .gitignore  Dockerfile  README.md  Shopper Challenge.postman_collection.json  db.sqlite3  doc.txt  docker-compose.yaml  docker-compose.yml  entrypoint.sh  manage.py  postman_collection.json  pyproject.toml  readme.txt  requirements.txt  shop_test.postman_collection.json  test doc.txt
DjangoShopper/: asgi.py  decorators.py  settings.py  urls.py  wsgi.py
Postman file/: Django-Shopper.postman_collection.json
Shopper/: db.sqlite3  manage.py
accounts/: admin.py  api.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
core/: admin.py  models.py
django_shopper/: asgi.py  messages.py  settings.py  urls.py  wsgi.py
google_api/: apps.py  client_secret.json  google_token_util.py  serializers.py  tests.py  urls.py  views.py
identity/: admin.py  custom_classes.py  models.py  serializers.py  tests.py  urls.py  views.py
online_shop/: settings.py  urls.py  wsgi.py
orders/: admin.py  api.py  models.py  serializers.py  tests.py  urls.py
postman-documentation/: Django-Shopper.postman_collection.json
postman_apis/: nilva_challange.postman_collection.json
prj/: settings.py  urls.py
products/: admin.py  api.py  managers.py  models.py  tests.py  urls.py  views.py
products_api/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
profiles_api/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
shop/: admin.py  models.py  serializer.py  serializers.py  (+4 more)
(+176 files in other folders)
